kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/004_cyclicCompositions_02.kmt
/* $Id: 004_cyclicCompositions_02.kmt,v 1.2 2006-03-30 12:37:49 ssaudrai Exp $ */

// Test of a invalid associations

package root_package;


/* cyclic composition */
class A {
    attribute b : B[1]
}
class B {
	attribute c : C[1]
}
class C {
	attribute a : A[1]
}

